--- a/index.html
+++ b/index.html
@@ -5,8 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    “Hello World, we re software developers!”
+    <nav id="navbar">
+        <a href="#welcome-section">About</a>
+        <a href="#projects">Work</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <section id="welcome-section">
+        <h1>Hey I am Mimic</h1>
+        <span>a web developer</span>
+    </section>
+    <section id="projects">
+        <span>These are some of my projects</span>
+        <div>
+            <div class="project-tile">
+                <a href="#">Tribute Page</a>
+            </div>
+            <div class="project-tile">
+                <a href="#">Random Quote Machine</a>
+            </div>
+            <div class="project-tile">
+                <a href="#">JavaScript Calculator</a>
+            </div>
+            <div class="project-tile">
+                <a href="#">Map Data Across the Globe</a>
+            </div>
+            <div class="project-tile">
+                <a href="#">Wikipedia Viewer</a>
+            </div>
+            <div class="project-tile">
+                <a href="#">Tic Tac Toe Game</a>
+            </div>
+        </div>
+        <div>
+            <span>
+                <a href="#">Show all <img src="images/chevron-forward-outline.svg" alt="right arrow"></a>
+            </span>
+        </div>
+    </section>
+    <section id="contact">
+        <div>
+            <span id="title-bold">Let's work together...</span>
+            <span id="title-italic">How do you take your coffee?</span>
+        </div>
+        <div>   
+            <a href="https://facebook.com/" target="_blank"><img src="images/logo-facebook.svg" alt="facebook home page">Facebook</a>
+            <a href="https://github.com/lily4178993/grace-x-nelly.git" id="profile-link" target="_blank"><img src="images/logo-github.svg" alt="github repository">GitHub</a>
+            <a href="https://twitter.com/" target="_blank"><img src="images/logo-twitter.svg" alt="twitter home page">Twitter</a>
+            <a href="#"><img src="images/at-outline.svg" alt="at at-outline">Send a mail</a>
+            <a href="#"><img src="images/phone-portrait-outline.svg" alt="phone logo">Call me</a>
+        </div>
+    </section>
 </body>
 </html>
