--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>a web developer</span>
     </section>
     <section id="projects">
-        <span>These are some of my projects</span>
+        <span id="project-title">These are some of my projects</span>
         <div>
             <div class="project-tile">
                 <a href="#">Tribute Page</a>
