--- a/index.html
+++ b/index.html
@@ -21,22 +21,28 @@
         <span id="project-title">These are some of my projects</span>
         <div>
             <div class="project-tile">
-                <a href="#">Tribute Page</a>
+                <img src="images/tribute-page-main-image.jpg" alt="Tribute page">
+                <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">Tribute Page</a>
             </div>
             <div class="project-tile">
-                <a href="#">Random Quote Machine</a>
+                <img src="images/random.jpeg" alt="random quote">
+                <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ">Random Quote Machine</a>
             </div>
             <div class="project-tile">
-                <a href="#">JavaScript Calculator</a>
+                <img src="images/calculator.jpeg" alt="calculator">
+                <a href="https://codepen.io/freeCodeCamp/full/wgGVVX">JavaScript Calculator</a>
             </div>
             <div class="project-tile">
-                <a href="#">Map Data Across the Globe</a>
+                <img src="images/map data.jpeg" alt="map">
+                <a href="https://codepen.io/freeCodeCamp/full/mVEJag">Map Data Across the Globe</a>
             </div>
             <div class="project-tile">
-                <a href="#">Wikipedia Viewer</a>
+                <img src="images/wki viewer.jpeg" alt="Wikipedia viewer">
+                <a href="https://codepen.io/freeCodeCamp/full/wGqEga">Wikipedia Viewer</a>
             </div>
             <div class="project-tile">
-                <a href="#">Tic Tac Toe Game</a>
+                <img src="images/tic tac toe.jpeg" alt="tic tac toe">
+                <a href="https://codepen.io/freeCodeCamp/full/KzXQgy">Tic Tac Toe Game</a>
             </div>
         </div>
         <div>
